[package]
name = "first"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.0"
tui = { version = "0.16", features = ["crossterm"] }
crossterm = "0.22"